[gd_scene load_steps=22 format=3 uid="uid://bkwflybey1smm"]

[ext_resource type="Script" uid="uid://bq4gnwctciu45" path="res://scenes/battle_unit/battle_unit.gd" id="1_rmpo8"]
[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://assets/sprites/rogues.png" id="1_tah2m"]
[ext_resource type="Resource" uid="uid://dyqvoxv3vg6hp" path="res://data/units/bjorn.tres" id="2_1myfu"]
[ext_resource type="Script" uid="uid://bpfvys3yg0516" path="res://components/packed_sprite2d.gd" id="2_rmpo8"]
[ext_resource type="PackedScene" uid="uid://di1627tggvh6r" path="res://scenes/health_bar/health_bar.tscn" id="3_4s270"]
[ext_resource type="PackedScene" uid="uid://c7pf7qph33dgb" path="res://scenes/mana_bar/mana_bar.tscn" id="4_u0yfu"]
[ext_resource type="Script" uid="uid://deepgshpthm4v" path="res://components/hurtbox.gd" id="5_1myfu"]
[ext_resource type="PackedScene" uid="uid://unne35x1mlsa" path="res://scenes/tier_icon/tier_icon.tscn" id="5_hf5vq"]
[ext_resource type="Script" uid="uid://cefxv7hcoa2el" path="res://custom_nodes/detect_range.gd" id="5_nmiut"]
[ext_resource type="Script" uid="uid://bml2bk8y0qsx4" path="res://scenes/battle_unit/ai/unit_ai.gd" id="9_hf5vq"]
[ext_resource type="Script" uid="uid://bfscdqp6aiuqe" path="res://components/flip_sprite.gd" id="10_euuyt"]
[ext_resource type="Script" uid="uid://g6jcquelxqiu" path="res://custom_nodes/target_finder.gd" id="10_nmiut"]
[ext_resource type="Script" uid="uid://b016fi4sooh3e" path="res://components/attack.gd" id="11_4i2cr"]
[ext_resource type="Script" uid="uid://br017kbxir65y" path="res://components/scene_spawner.gd" id="12_w8xno"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1myfu"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmiut"]
size = Vector2(36, 36)

[sub_resource type="Animation" id="Animation_rmpo8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tah2m"]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, 0.349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 0.8), Vector2(0.8, 1.2), Vector2(0.9, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4s270"]
resource_name = "cast"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 0.7), Vector2(0.7, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.923679, 0.988038, 0, 1), Color(0.923679, 0.988038, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u0yfu"]
resource_name = "move"
length = 0.55
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin:skew")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hf5vq"]
_data = {
&"RESET": SubResource("Animation_rmpo8"),
&"attack": SubResource("Animation_tah2m"),
&"cast": SubResource("Animation_4s270"),
&"move": SubResource("Animation_u0yfu")
}

[node name="BattleUnit" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_rmpo8")
stats = ExtResource("2_1myfu")

[node name="Skin" type="Sprite2D" parent="."]
texture = ExtResource("1_tah2m")
region_enabled = true
region_rect = Rect2(128, 64, 32, 32)
script = ExtResource("2_rmpo8")
coordinates = Vector2i(4, 2)
metadata/_custom_type_script = "uid://bpfvys3yg0516"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1myfu")

[node name="DetectRange" type="Area2D" parent="." node_paths=PackedStringArray("col_shape")]
script = ExtResource("5_nmiut")
col_shape = NodePath("CollisionShape2D")
base_range_size = 36.0
metadata/_custom_type_script = "uid://cefxv7hcoa2el"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
debug_color = Color(0.555828, 0.00284761, 0.847295, 0.42)

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("5_1myfu")
metadata/_custom_type_script = "uid://deepgshpthm4v"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_nmiut")
debug_color = Color(1, 0, 0, 0.419608)

[node name="AttackAnchor" type="Node2D" parent="."]

[node name="AttackMarker" type="Marker2D" parent="AttackAnchor"]
position = Vector2(16, 0)

[node name="HealthBar" parent="." instance=ExtResource("3_4s270")]
offset_left = -15.0
offset_top = -28.0
offset_right = 15.0
offset_bottom = -22.0

[node name="ManaBar" parent="." instance=ExtResource("4_u0yfu")]
offset_left = -15.0
offset_top = -23.0
offset_right = 15.0
offset_bottom = -19.0

[node name="TierIcon" parent="." instance=ExtResource("5_hf5vq")]
z_index = 1
offset_left = -16.0
offset_top = -21.0
offset_right = -6.0
offset_bottom = -11.0

[node name="FSMDebugLabel" type="Label" parent="."]
offset_left = -65.0
offset_top = -47.0
offset_right = 65.0
offset_bottom = -29.0
horizontal_alignment = 1

[node name="AbilitySpawner" type="Node" parent="."]
script = ExtResource("12_w8xno")
metadata/_custom_type_script = "uid://br017kbxir65y"

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0

[node name="FlipSprite" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("10_euuyt")
sprite = NodePath("../Skin")
metadata/_custom_type_script = "uid://bfscdqp6aiuqe"

[node name="MeleeAttack" type="Node" parent="." node_paths=PackedStringArray("parent", "anchor", "spawn_point", "spawner")]
script = ExtResource("11_4i2cr")
parent = NodePath("..")
anchor = NodePath("../AttackAnchor")
spawn_point = NodePath("../AttackAnchor/AttackMarker")
spawner = NodePath("MeleeAttackSpawner")
metadata/_custom_type_script = "uid://b016fi4sooh3e"

[node name="MeleeAttackSpawner" type="Node" parent="MeleeAttack"]
script = ExtResource("12_w8xno")
metadata/_custom_type_script = "uid://br017kbxir65y"

[node name="RangedAttack" type="Node" parent="." node_paths=PackedStringArray("parent", "anchor", "spawn_point", "spawner")]
script = ExtResource("11_4i2cr")
parent = NodePath("..")
anchor = NodePath("../AttackAnchor")
spawn_point = NodePath("../AttackAnchor/AttackMarker")
spawner = NodePath("ProjectileSpawner")
metadata/_custom_type_script = "uid://b016fi4sooh3e"

[node name="ProjectileSpawner" type="Node" parent="RangedAttack"]
script = ExtResource("12_w8xno")
metadata/_custom_type_script = "uid://br017kbxir65y"

[node name="TargetFinder" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("10_nmiut")
actor = NodePath("..")
metadata/_custom_type_script = "uid://g6jcquelxqiu"

[node name="UnitAI" type="Node" parent="." node_paths=PackedStringArray("debug_label", "actor")]
script = ExtResource("9_hf5vq")
debug_label = NodePath("../FSMDebugLabel")
actor = NodePath("..")
metadata/_custom_type_script = "uid://bml2bk8y0qsx4"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hf5vq")
}
